2010-09-08  MORITA Hajime  <morrita@google.com>

Reviewed by Tony Chang.

        spelling underline gets lost on backspace
        https://bugs.webkit.org/show_bug.cgi?id=41423

        * editing/spelling/script-tests/TEMPLATE.html: Copied from LayoutTests/editing/selection/script-tests/TEMPLATE.html.
        * editing/spelling/script-tests/spelling-backspace-between-lines.js: Added.
        * editing/spelling/spelling-backspace-between-lines-expected.txt: Added.
        * editing/spelling/spelling-backspace-between-lines.html: Added.
2010-09-08  MORITA Hajime  <morrita@google.com>

        Reviewed by Tony Chang.

        spelling underline gets lost on backspace
        https://bugs.webkit.org/show_bug.cgi?id=41423

        moveParagraphs() did make a DOM range by serializing source range
        and deserializing it back, and markers are gone during the process.
        This change marks that DOM range again.

        Test: editing/spelling/spelling-backspace-between-lines.html

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphs):
        * editing/Editor.cpp:
        (WebCore::Editor::clearMisspellingsAndBadGrammar): Added.
        (WebCore::Editor::markMisspellingsAndBadGrammar): Added.
        * editing/Editor.h:
2010-09-08  MORITA Hajime  <morrita@google.com>

        Reviewed by Tony Chang.

        spelling underline gets lost on backspace
        https://bugs.webkit.org/show_bug.cgi?id=41423

        Switched to use a anchorNode of the selection instead of a focused
        node for finer control of node selection in spellingNode():
        With the focused node, we cannot select other nodes but the first
        child of that node. In some case, we need to inspect these.

        The API is only for LayoutTests, and the change is compatible for
        existing test cases.

        * WebView/WebFrame.mm:
        (spellingNode):

Canonical link: https://commits.webkit.org/57794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67049 268f45cc-cd09-0410-ab3c-d52691b4dbfc